--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tommyds"]
 	path = tommyds
-	url = git@github.com:amadvance/tommyds.git
+	url = https://github.com/amadvance/tommyds.git
